--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "preline": "^2.1.0",
     "react": "^18.3.1",
